bug _plugins hostdiscover

--- a/trc_nginx/www/terminal.html
+++ b/trc_nginx/www/terminal.html
@@ -84,7 +84,7 @@
     <option value="Windows Server 2019">Windows Server 2019</option>
   </select>
 </form>
-<a href="plugins/hostdiscover.html" style="float: right;">主机发现</a>
+<a href="_plugins/hostdiscover.html" style="float: right;">主机发现</a>
 </div>
 <p align="center">&nbsp;</p>
 <table style="margin-top:10px;margin-bottom:10px;border-spacing: 0px;border: 1px solid #0075ff;" border="1">
